displayed moods with button using javascript

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
   <link rel='stylesheet' href='./resources/css/styles.css'>
+  <link rel='flexing' href='data.js'>
 <title></title>
 </head>
 
 <body>
     <header class='page-header'>
         <h4>The Mood Shop</h4>
-        <nav>
+        <nav class='nav-bar'>
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -16,5 +17,16 @@
           </ul>
         </nav>
       </header>
+      <main class='items' id='items'>
+        <!--
+          Display moods here
+         -->
+    </main>
+    <div>
+      <img src=’./resource/images’ width=300 height=300>
+      <p>description of mood</p>
+      <p>5.99</p>
+    </div>
+    <script src='./resources/js/scripts.js' type="module"></script>
 </body>
 </html>
